Always show scrolbar to avoid horizontal jumpy UI

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -50,6 +50,7 @@ $dropdown-link-active-bg: #11131f;
 
 html, body {
   height: 100%;
+  overflow-y: scroll;
 }
 
 body {
